--- a/main.html
+++ b/main.html
@@ -196,7 +196,7 @@
     <!-- Background Video -->
     <div class="video-background">
         <video id="backgroundVideo" autoplay muted loop playsinline>
-            <source src="C:\Rishabh\Projects\Hmm\bg\2.2.mp4" type="video/mp4">
+            <source src="bg\2.2.mp4" type="video/mp4">
             <!-- Since we can't use real videos in this playground, we're using a placeholder. 
                  In a real implementation, you would replace with an actual video URL -->
         </video>
